# creative-engine-x-api

./: .env.example  .gitignore  CHANGELOG.md  CREATIVE_ENGINE_X_CANONICAL.md  Dockerfile  pyproject.toml
creative-engine-x-remotion/: .gitignore  deploy.ts  iam-setup.ts  package-lock.json  package.json  tsconfig.json
creative-engine-x-remotion/__tests__/: compositions.test.ts  deploy.test.ts  inputProps.test.ts  (+1 more)
docs/: ARCHITECTURE.md  FIGMA_API_REFERENCE.md  FIGMA_EXTRACTION_REPORT.md  FIGMA_IMPLEMENTATION_AUDIT.md  LOB_MAILER_CONSTRAINTS.md  POST_SHIP_ENGINEERING_AUDIT.md  SCAFFOLD_MASTERS.md  figma-extraction-report.json  figma-validation-summary.json
migrations/: 001_initial_schema.sql
scaffolds/: booklet-8.375x5.375.html  buckslip.html  card-affix.html  letter-8.5x11.html  letter-8.5x14.html  postcard-4x6.html  postcard-5x7.html  postcard-6x11.html  postcard-6x9.html  selfmailer-11x9-bifold.html  selfmailer-12x9-bifold.html  selfmailer-17.75x9-trifold.html  selfmailer-6x18-bifold.html  snappack-8.5x11.html
scripts/: validate_figma_zones.py
src/: config.py  db.py  dependencies.py  main.py
src/auth/: models.py  (+3 more)
tests/: test_audio_renderer.py  test_auth.py  test_brand.py  test_claude.py  test_db.py  test_elevenlabs_provider.py  test_generators.py  test_generators_base.py  test_health.py  test_html_renderer.py  test_jobs.py  test_landing_pages.py  test_pdf_renderer.py  test_pipeline.py  test_remotion_provider.py  test_renderers_base.py  test_routing.py  test_slide_renderer.py  test_specs.py  test_storage.py  test_video_renderer.py  test_youtube_extractor.py
(+70 files in other folders)
