[project]
name = "creative-engine-x-api"
version = "0.1.0"
description = "Creative asset pipeline service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "asyncpg>=0.30.0",
    "anthropic>=0.45.0",
    "PyJWT[crypto]>=2.8.0",
    "bcrypt>=4.2.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "reportlab>=4.1",
    "youtube-transcript-api>=1.0.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
